# federation

./: README.md  docker-compose-e2e.yml  docker-compose-test-e2e.yml  generate_gh_grpc.sh  generate_partner_grpc.sh  run_e2e.sh  test_e2e.sh
.github/workflows/: e2e_tests.yaml  gh_graphql_build.yaml  gh_grpc_build.yaml  gh_tests.yaml  partner_build.yaml  partner_tests.yaml  sim_build.yaml  sim_tests.yaml
demo/: README.md  approve_cases.py  approve_estimates.py  create_cases.py  get_cases.py  get_estimates.py  request_cases.py  request_estimates.py  request_model_comparisons.py  util.py
e2e/: Dockerfile  Dockerfile-test  pyproject.toml  setup.sh  setup_localstack.py  test.sh  test_e2e.py  wait_for_db.py  wait_for_rabbitmq.py  wait_for_servers.py
gh/: Dockerfile  Dockerfile-amqp  Dockerfile-fake-grpc-service  Dockerfile-graphql  Dockerfile-test  amqp.sh  amqp_server.py  aws.py  constants.py  db.py  docker-compose-test.yml  docker-compose.yml  fake_grpc_service.py  graphics.py  graphql_server.py  grpc_client.py  pyproject.toml  run_fake_grpc_service.sh  run_gh.sh  setup.sh  setup_db.py  setup_localstack.py  test.sh  test_gh.py  test_gh.sh  util.py  wait_for_flask.py  wait_for_grpc.py  wait_for_localstack.py  wait_for_rabbitmq.py  wait_for_secrets.py
outbreak_simulator/: Dockerfile-test  docker-compose-test.yml  docker-compose.yml  pyproject.toml  run.sh  run_sim.sh  schema.prisma  sim.py  test.sh  test_sim.py  test_sim.sh  wait_for_db.py
partner/: Dockerfile  Dockerfile-test  README.md  constants.py  data_client.py  data_server.py  docker-compose-test.yml  docker-compose.yml  pyproject.toml  run.sh  run_epyestim.py  run_model_comparison.py  run_partner.sh  setup.sh  setup_db.py  setup_localstack.py  spike.py  test.sh  test_data_client.py  test_data_server.py  test_partner.sh  wait_for_grpc.py  wait_for_localstack.py  wait_for_rabbitmq.py
protobufs/: cases.proto  model_comparison.proto  rt_estimate.proto
remote_dependency_management/: README.md  daemon.py  docker-compose.yml  pyproject.toml  setup_ecr_repo.py  setup_localstack.py  test.sh  test_remote.py
