[tool.poetry]
name = "e2e"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.4.1"
boto3 = "^1.28.28"
requests = "^2.31.0"
pytest = "^7.4.0"
dnspython = "^2.4.2"
pika = "^1.3.2"
cryptography = "^41.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
