[tool.poetry]
name = "amqp-grpc"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "amqp_grpc"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.28.28"
pika = "^1.3.2"
pymongo = "^4.4.1"
pytest = "^7.4.0"
grpcio = "^1.57.0"
google = "^3.0.0"
protobuf = "^4.24.0"
requests = "^2.31.0"
dnspython = "^2.4.2"
graphene = "^3.2"
mongoengine = "^0.24.2"
graphene-mongo = "^0.2.15"
aiohttp = "^3.8.3"
grpc-interceptor = "^0.15.3"
cognitojwt = "^1.4.1"
matplotlib = "^3.7.0"
cryptography = "^41.0.6"
flask = "^2.3.2"
flask-httpauth = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
