[tool.poetry]
name = "outbreak_simulator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
psycopg = "^3.1.10"
Faker = "^15.3.4"
Flask = "^2.3.2"
prisma = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
